# weather-tui

./: Cargo.toml  LICENSE-MIT  README.md  default-config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: api.rs  main.rs  terminal.rs  ui.rs
src/api/: mod.rs  responses.rs
src/handlers/: app.rs  config.rs  event.rs
src/utils/: mod.rs  pathing.rs  text.rs
