[package]
name = "weather-tui"
version = "0.1.0"
edition = "2021"
description = "Weather in the terminal."
documentation = "https://github.com/Xithrius/weather-tui"
homepage = "https://github.com/Xithrius/weather-tui"
repository = "https://github.com/Xithrius/weather-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "weather"]
categories = ["command-line-utilities"]

[dependencies]
tui = { version = "0.19.0", default-features = false, features = [ "crossterm" ] }
serde = { version = "1.0.148", features = [ "derive" ] }
tokio = { version = "1.22.0", features = [ "full" ] }
reqwest = { version = "0.11.13", features = [ "json" ] }
crossterm = "0.25.0"
toml = "0.5.9"
color-eyre = "0.6.2"
chrono = "0.4.23"
textwrap = "0.16.0"
serde_json = "1.0.91"

[profile.dev.package.backtrace]
opt-level = 3

[[bin]]
bench = false
path = "src/main.rs"
name = "wt"

[profile.release]
lto = "thin"
