[package]
name = "weather-tui"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.75.0"
description = "Weather in the terminal."
documentation = "https://github.com/Xithrius/weather-tui"
homepage = "https://github.com/Xithrius/weather-tui"
repository = "https://github.com/Xithrius/weather-tui"
license = "MIT OR Apache-2.0"
keywords = ["tui", "weather"]
categories = ["command-line-utilities"]

[dependencies]
tui = { package = "ratatui", version = "0.27.0", default-features = false, features = [ "crossterm", "serde" ] }
serde = { version = "1.0.203", features = [ "derive" ] }
tokio = { version = "1.38.0", features = [ "full" ] }
reqwest = { version = "0.12.5", features = [ "json" ] }
crossterm = "0.27.0"
toml = "0.8.14"
color-eyre = "0.6.3"
chrono = "0.4.38"
textwrap = "0.16.1"
serde_json = "1.0.121"

[[bin]]
bench = false
path = "src/main.rs"
name = "wt"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
